--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -369,3 +369,119 @@ main {
   line-height: 1.8rem;
   color: #808080;
 }
+
+/* Section with background */
+
+.bitcoin-img-container {
+  display: flex;
+  width: 100%;
+  min-width: 320px;
+  height: 50vh;
+  background-image: url('../../assets/images/bitcoinbaby-2x.webp');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  justify-content: center;
+}
+
+.bitcoin-img-container h2{
+  padding-top: 60px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--just-white);
+}
+
+/* Section plans styles */
+
+.main-plans-container {
+  width: 100%;
+  min-width: 320px;
+  padding-bottom: 70px;
+  text-align: center;
+  background-color: var(--off-white);
+}
+
+.plans__title {
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.plans__title h2 {
+  padding-top: 50px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--black);
+}
+
+.plans__title p {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #757575;
+  margin-bottom: 30px;
+}
+
+/* slider cards styles */
+ 
+.card-container{
+  position: relative;
+  width: 70%;
+  min-width: 230px;
+  max-width: 300px;
+  height: 250px;
+  margin: 50px auto 0;
+  padding: 0 15px;
+  background-color: var(--just-white);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(89,73,30, 0.16);
+ }
+
+ .card__recomended {
+   position: absolute;
+   width: 120px;
+   height: 31px;
+   left: calc(50% - 60px);
+   top: -15px;
+   font-size: 1.2rem;
+   background-color: var(--bitcoin-orange);
+   border-radius: 8px;
+   color: var(--just-white);
+   padding: 6px;
+ }
+
+ .card__title {
+   padding-top: 30px;
+   font-size: 1.4rem;
+   font-weight: 500;
+   line-height: 1.8rem;
+   color: black;
+ }
+
+ .card__price{
+  position: relative;
+  padding: 15px 0;
+  font-size: 5.2rem;
+  font-weight: bold;
+  line-height: 5.3rem;
+  color: black;
+ }
+
+ .card__price span {
+   position: absolute;
+   top: -7px;
+   right: 70px;
+   left: 0;
+   font-size: 1.2rem;
+   font-weight: 300;
+   padding-bottom: 15px;
+ }
+
+ .card__saving {
+   font-size: 1.2rem;
+   color: #757575;
+ }
