--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -435,7 +435,7 @@ main {
   position: relative;
   scroll-snap-align: center;
   width: 70%;
-  min-width: 230px;
+  min-width: 190px;
   max-width: 300px;
   height: 250px;
   margin: 50px 20px 0;
@@ -556,5 +556,33 @@ main {
   background-repeat: no-repeat; */
   vertical-align: text-bottom;
 }
+
+/* Footer styles */
+
+footer {
+  display: flex;
+  width: 100%;
+  height: 150px;
+  background-color: var(--bitcoin-orange);
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+footer .footer__left ul{
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  list-style: none;
+}
+
+.footer__left li {
+  margin: 10px 0;
+}
+
+.footer__left a {
+  text-decoration: none;
+  color: var(--just-white); 
+}
+
 
 
