Fix title for table

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -175,7 +175,7 @@ main {
   font-size: 1.8rem;
   line-height: 2.3rem;
   color: var(--bitcoin-orange);
-  text-align: left;
+  text-align: center;
   margin-left: 10px;
 }
 
